# ppGB-emu

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PROPOSAL.md  README.md  build.sh  flake.nix  main.cpp  ppGB
.github/workflows/: cpp_cd.yaml  cpp_ci.yaml
include/: ANSI-color-codes.h  ANSI-color-codes.hpp  cb_opcodes.hpp  cli_opts.hpp  cpu.h  cpu.hpp  display.h  gb.hpp  memory.h  mmu.hpp  opcodes.hpp  ppu.hpp  reg.hpp  tile.hpp
include/cpu/: cb_opcodes.hpp  cpu.hpp  opcodes.hpp  reg.hpp
include/mmu/: mmu.hpp  mmu_regs.hpp  palette.hpp  tile.hpp
include/ppu/: fifo.hpp  ppu.hpp
scripts/: run_test_roms
src/: ANSI-color-codes.cpp  boot.h  cb_opcodes.cpp  cli_opts.cpp  cpu.cpp  debug.cpp  display.cpp  gb.cpp  gpu.cpp  instructions.cpp  interrupts.cpp  memory.cpp  mmu.cc  opcodes.cpp  options.h
src/cartridge/: cartridge_info.cc
src/cpu/: cb_opcodes.cpp  cpu.cc  cpu.cpp  opcodes.cpp  reg.cpp
src/mmu/: mmu.cpp  mmu_regs.cpp  palette.cpp  tile.cpp
src/ppu/: fifo.cpp  ppu.cpp
src/util/: log.cc
src/video/: video.cc
tests/: Makefile  cb_inst_test.cpp  inst_test.cpp  instruction_tests.cpp  mmu_tests.cpp  ppu_tests.cpp  reg_test.cpp  sm83_tests.cpp  test_globals.cpp  test_globals.hpp
